Fix formulabar vertical padding and odd numbers
- Set heights to even numbers so we don't end up with uneven
  surrounding vertical spaces
- Remove individual top margins (margin-block-start) from btns
  - Instead fix underlying issue with formulabar
- Fix text-area padding inconsistencies between being expanded
  and collapsed. Problem: text area becomes taller, ending up
  occupying the top and bottom white space left from its parent
  - Leverage new css class added to the main parent #formulabar
    and add vertical padding so text-area forces parent to increase
    in size
  - Remove sub parent's (#tb_formulabar_item_formula)
    individual top padding

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -154,8 +154,11 @@ w2ui-toolbar {
 	padding: 0 4px;
 }
 
+#formulabar.expanded {
+	padding-block: 5px;
+}
+
 #tb_formulabar_item_address {
-	padding-block-start: 2px;
 	padding-inline-end: 5px;
 	vertical-align: top;
 }
@@ -210,7 +213,7 @@ w2ui-toolbar {
 }
 
 #addressInput {
-	height: 29px;
+	height: 28px;
 	width: 100px;
 	color: var(--color-main-text);
 	background-color: var(--color-background-lighter);
@@ -220,7 +223,6 @@ w2ui-toolbar {
 
 #tb_formulabar_item_formula {
 	width: 100%;
-	padding-top: 4px;
 }
 
 #tb_formulabar_item_formula div table {
